# FlexQMRI

./: .gitignore  README.md  pyproject.toml
flexqmri/: __init__.py
flexqmri/analysis/: __init__.py  repeatability.py  roi.py
flexqmri/compute_maps/: __init__.py  general.py  ivim.py  r2star.py
flexqmri/config/inference/: common.yaml  ivim.yaml  t2star.yaml
flexqmri/config/training/: general.yaml  ivim_data.yaml  lsq.yaml  mlp.yaml  ncde.yaml  t2star_data.yaml  transformer.yaml  variable_length_ivim_experiment.yaml  variable_length_t2star_experiment.yaml
flexqmri/convert/: dicom2nifti.py
flexqmri/dataset/: __init__.py  base.py  datamodule.py  factory.py  loaders.py  real.py  synthetic.py
flexqmri/evaluation/: __init__.py  comparisons.py  evaluate.py  map_plots.py  recompute.py  repeatability_plots.py  results_plots.py  tables.py  training_plots.py  utils.py  variable_length.py
flexqmri/imaging/: __init__.py  config.py  filters.py  loaders.py  patient.py  savers.py  structures.py
flexqmri/models/: __init__.py  lsq_fit.py  supervised.py
flexqmri/networks/: __init__.py  mlp.py  ncde.py  transformer.py  utils.py
flexqmri/preprocessing/: __init__.py  align.py  denoising.py  normalization.py
flexqmri/utils/: __init__.py  biophysical_model.py  config.py  io.py  parse.py  utils.py
scripts/inference/: compare_real_values.py  intra_repeat.py  ivim_patient.py  r2star_patient.py
scripts/reproduce/: compare_trained_models.py  test_variable_length.py
scripts/train/: run_lsq.py  train_multi_fixed_models.py  train_networks.py
